Add profile-level generic assay aggregation
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>