@@ -97,6 +97,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.util.StringUtils;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.RequestAttribute;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -1364,8 +1365,14 @@ public class StudyViewController {
           GenericAssayDataCountFilter interceptedGenericAssayDataCountFilter) {
 
     List<GenericAssayDataFilter> gaFilters =
-        interceptedGenericAssayDataCountFilter.getGenericAssayDataFilters();
+        interceptedGenericAssayDataCountFilter.getGenericAssayDataFilters() == null
+            ? new ArrayList<>()
+            : interceptedGenericAssayDataCountFilter.getGenericAssayDataFilters();
+    String profileType = interceptedGenericAssayDataCountFilter.getProfileType();
     StudyViewFilter studyViewFilter = interceptedGenericAssayDataCountFilter.getStudyViewFilter();
+    if (gaFilters.isEmpty() && !StringUtils.hasText(profileType)) {
+      return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+    }
     // when there is only one filter, it means study view is doing a single chart filter operation
     // remove filter from studyViewFilter to return all data counts
     // the reason we do this is to make sure after chart get filtered, user can still see unselected
@@ -1385,14 +1392,21 @@ public class StudyViewController {
     List<String> sampleIds = new ArrayList<>();
     studyViewFilterUtil.extractStudyAndSampleIds(filteredSampleIdentifiers, studyIds, sampleIds);
 
-    List<GenericAssayDataCountItem> result =
-        studyViewService.fetchGenericAssayDataCounts(
-            sampleIds,
-            studyIds,
-            gaFilters.stream().map(GenericAssayDataFilter::getStableId).toList(),
-            gaFilters.stream()
-                .map(GenericAssayDataFilter::getProfileType)
-                .collect(Collectors.toList()));
+    List<GenericAssayDataCountItem> result;
+    if (!gaFilters.isEmpty()) {
+      result =
+          studyViewService.fetchGenericAssayDataCounts(
+              sampleIds,
+              studyIds,
+              gaFilters.stream().map(GenericAssayDataFilter::getStableId).toList(),
+              gaFilters.stream()
+                  .map(GenericAssayDataFilter::getProfileType)
+                  .collect(Collectors.toList()));
+    } else {
+      result =
+          studyViewService.fetchGenericAssayDataCountsByProfileType(
+              sampleIds, studyIds, profileType);
+    }
 
     return new ResponseEntity<>(result, HttpStatus.OK);
   }
